--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,18 @@
-.text-white {
-}
 
-.bg-dark {
-  /*   background-color: darkgray;
-  margin: 10px;
-  border: 5px solid yellow;
-  padding: 10px; */
-}
-/*test*/
 
 .nav-item {
-  color: blue;
+  color: black;
   text-decoration: none;
+  list-style: none;
 }
+.footer {
+  padding-left: 64px;
+  margin: 0 auto;
+  background-color: rgba(211, 211, 211, 0.639);
+}
+.footer-section {
+  margin-right: auto;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+  
