--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,54 @@
-
-
+body {
+  max-width: none;
+  margin: 64px;
+}
+.top-header {
+  display: flex;
+  align-items: center;
+}
+.top-header img {
+  margin-right: auto;
+  padding-left: 0px;
+}
 .nav-item {
-  color: black;
-  text-decoration: none;
+  display: flex;
+  color: blue
   list-style: none;
+  text-decoration: none;
+}
+.nav-inscription {
+  display: flex;
+  padding-left: 100px;
+  color: blue;
+}
+.nav-link-active {
+  display: flex;
+  padding-left: 64px;
+}
+.section {
+  display: flex;
+  margin: 64px;
+  margin-top: -30px
+}
+.container {
+  display: flex;
+  background-color: gray;
+}
+.span {
+  display: flex;
 }
 .footer {
-  padding-left: 64px;
-  margin: 0 auto;
-  background-color: rgba(211, 211, 211, 0.639);
+  display: flex;
+  text-align: center;
 }
 .footer-section {
-  margin-right: auto;
-  padding-left: 24px;
-  padding-right: 24px;
+  display: flex;
+  text-align: center;
+  margin-right: 64px;
 }
-  
+.image-wrapper {
+  display: flex;
+}
+.image-wrapper section {
+  display: flex;
+}
