--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
   margin-left: -10px;
 }
 .top-header img {
-  margin-right: 750px;
+  margin-right: auto;
   margin-top: 5px;
   max-width: 100px;
 }
@@ -25,14 +25,14 @@ body {
 }
 .nav-itemblue a {
   display: flex;
-  color: blue;
+  color: #0065FC;
   list-style: none;
   text-decoration: none;
   margin-right: 34px;
   margin-left: 34px;
   font-size: 14px;
   font-weight: thick;
-  border-top: 5px solid blue;
+  border-top: 5px solid #0065FC;
 }
 .nav-item a {
   display: flex;
@@ -50,7 +50,7 @@ body {
   text-decoration: none;
   padding-right: 4px;
   font-size: 14px;
-  color: blue;
+  color: #0065FC;
   font-weight: bolder;
 }
 .nav-link-active a {
@@ -60,7 +60,7 @@ body {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
-  font-size: 10px;
+  font-size: 8px;
 }
 .nature {
   display: flex;
@@ -84,27 +84,29 @@ body {
   margin-left: 34px;
   gap: 10px;
   align-items: center;
-  border-bottom: 1px solid darkgrey;
-  border-top: 1px solid darkgrey;
+  border-bottom: 1px solid #F2F2F2;
+  border-top: 1px solid #F2F2F2;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+  font-weight: bold;
+  font-size: 12px;
 }
 .filters {
   display: flex;
   flex-direction: row;
   align-items: center;
-  font-size: 14px;
+  font-size: 12px;
 }
 .filtersin {
   display: flex;
   flex-direction: row;
-  border-radius: 40px;
+  border-radius: 20px;
   border-color: black;
   margin-left: 24px;
   margin-right: 24px;
-  border: 0.5px solid darkgrey;
+  border: 0.5px solid lightgray;
   align-items: center;
-  font-size: 14px;
+  font-size: 12px;
 }
 .textfilters {
   display: flex;
@@ -114,7 +116,7 @@ body {
 }
 .fa-map-marker-alt {
   display: flex;
-  background-color: lightgray;
+  background-color: #F2F2F2;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   color: black;
@@ -123,13 +125,13 @@ body {
   padding-left: 10px;
   padding-bottom: 10px;
   padding-right: 10px;
-  border-bottom: 1px solid darkgrey;
-  border-top: 1px solid darkgrey;
+  border-bottom: 1px solid #F2F2F2;
+  border-top: 1px solid #F2F2F2;
   align-self: center;
 }
 .rechercher {
   display: flex;
-  background-color: blue;
+  background-color: #0065FC;
   color: white;
   padding-right: 14px;
   padding-left: 14px;
@@ -140,11 +142,13 @@ body {
   padding-left: 10px;
   padding-bottom: 10px;
   padding-right: 10px;
+  font-weight: bold;
+  font-size: 12px;
 }
 .fa-money-bill-wave {
   display: flex;
-  color: blue;
-  background-color: lightskyblue;
+  color: #0065FC;
+  background-color: #DEEBFF;
   padding-left: 14px;
   padding-top: 14px;
   padding-bottom: 14px;
@@ -154,8 +158,8 @@ body {
 }
 .fa-child {
   display: flex;
-  color: blue;
-  background-color: lightskyblue;
+  color: #0065FC;
+  background-color: #DEEBFF;
   padding-left: 17px;
   padding-top: 14px;
   padding-bottom: 14px;
@@ -165,8 +169,8 @@ body {
 }
 .fa-heart {
   display: flex;
-  color: blue;
-  background-color: lightskyblue;
+  color: #0065FC;
+  background-color: #DEEBFF;
   padding-left: 14px;
   padding-top: 14px;
   padding-bottom: 14px;
@@ -176,8 +180,8 @@ body {
 }
 .fa-dog {
   display: flex;
-  color: blue;
-  background-color: lightskyblue;
+  color: #0065FC;
+  background-color: #DEEBFF;
   padding-left: 14px;
   padding-top: 14px;
   padding-bottom: 14px;
@@ -187,7 +191,7 @@ body {
 }
 .fa-info-circle {
   display: flex;
-  color: darkgrey;
+  color: #0065FC;
   margin-left: -14px;
   padding-right: 10px;
 }
@@ -205,7 +209,7 @@ body {
   color: lightgray;
 }
 .bluestar {
-  color:rgb(0, 102, 255)
+  color: #0065FC;
 }
 .hbg {
   display: flex;
@@ -217,7 +221,7 @@ body {
   margin-left: 20px;
   margin-top: 30px;
   margin-bottom: 20px;
-  font-size: 20px;
+  font-size: 18px;
 }
 .blocksmalltitle {
   display: flex;
@@ -248,7 +252,7 @@ body {
 }
 .blockbigtitleact {
   display: flex;
-  font-size: 20px;
+  font-size: 18px;
 }
 .afficher {
   display: flex;
@@ -308,7 +312,7 @@ body {
 }
 .blockheb {
   display: flex;
-  background-color: lightgray;
+  background-color: #F2F2F2;
   flex-wrap: wrap;
   word-wrap: normal;
   flex-direction: column;
@@ -329,7 +333,7 @@ body {
 .blockpop {
   display: flex;
   flex-direction: column;
-  background-color: lightgray;
+  background-color: #F2F2F2;
   flex-wrap: wrap;
   border-radius: 20px;
   padding-left: 10px;
@@ -349,10 +353,9 @@ body {
   object-fit: cover;
   flex-direction: column;
   flex-wrap: nowrap;
-  max-width: 213px;
+  max-width: 218px;
   border: 3px solid white;
   box-shadow: 6px 6px 6px var(darkgrey);
-  align-items: center;
   width: 100%;
   height: 100%;
   margin-left: 20px;
@@ -406,7 +409,7 @@ body {
   border: 0px solid white;
   max-width: 250px;
   height: 400px;
-  box-shadow: 6px 6px 6px var(lightgray);
+  box-shadow: 6px 6px 6px var(darkgray);
 }
 .divimgactvieuxportcalanques {
   display: flex;
@@ -544,7 +547,7 @@ body {
   margin-left: -16px;
 }
 footer {
-  background-color: lightgray;
+  background-color: #F2F2F2;
   display: flex;
   text-align: center;
   flex-wrap: wrap;
@@ -552,9 +555,9 @@ footer {
   margin-right: -64px;
   padding-left: 64px;
   padding-right: 64px;
-  padding-top: 20px;
+  padding-top: 10px;
   padding-bottom: 50px;
-  margin-top: 40px;
+  margin-top: 30px;
 }
 .footer-section {
   margin-right: auto;
