--- a/styles.css
+++ b/styles.css
@@ -11,47 +11,68 @@ body {
 }
 .top-header {
   display: flex;
-  margin-bottom: 17px;
   margin-left: -10px;
+}
+@media(max-width: 768px) {
+  .top-header {
+    flex-direction: column;
+  }
 }
 .top-header img {
   margin-right: auto;
-  margin-top: 5px;
   max-width: 100px;
+  max-height: 40px;
+  margin-top: 30px;
 }
 .blocknav {
   display: flex;
-  margin-top: 20px;
+}
+@media(max-width: 768px) {
+  .blocknav {
+    flex-direction: column;
+  }
 }
 .nav-itemblue a {
   display: flex;
-  color: #0065FC;
+  color: #5e9dfc;
   list-style: none;
   text-decoration: none;
-  margin-right: 34px;
-  margin-left: 34px;
+  margin-right: 20px;
+  margin-left: 20px;
   font-size: 14px;
-  font-weight: thick;
-  border-top: 5px solid #0065FC;
+  border-top: 2px solid #0065FC;
+  line-height: 6.5;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-weight: bolder;
+}
+@media(max-width: 768px) {
+  .nav-itemblue a {
+    flex-direction: column;
+    border-top: none;
+    line-height: none;
+  }
 }
 .nav-item a {
   display: flex;
   color: black;
   list-style: none;
   text-decoration: none;
-  margin-right: 34px;
-  margin-left: 34px;
+  margin-right: 20px;
+  margin-left: 20px;
   font-size: 14px;
-  font-weight: thick;
+  padding-top: 40px;
 }
 .nav-inscription a {
   display: flex;
-  padding-left: 34px;
+  margin-left: 20px;
+  margin-right: 20px;
   text-decoration: none;
-  padding-right: 4px;
+  padding-right: 5px;
   font-size: 14px;
   color: #0065FC;
   font-weight: bolder;
+  padding-top: 40px;
 }
 .nav-link-active a {
   display: flex;
@@ -60,12 +81,14 @@ body {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
-  font-size: 8px;
+  font-size: 10px;
+  line-height: 1.5;
+  margin-top: -10px;
 }
 .nature {
   display: flex;
   margin-top: -10px;
-  font-size: 13px;
+  font-size: 14px;
 }
 .text {
   display: flex;
@@ -73,6 +96,7 @@ body {
 .marseille {
   display: flex;
   flex-direction: row;
+  margin-top: -5px;
   border-radius: 10px;
   padding-bottom: 24px;
   margin-left: -34px;
@@ -95,24 +119,30 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  font-size: 12px;
+  font-size: 14px;
 }
 .filtersin {
   display: flex;
   flex-direction: row;
   border-radius: 20px;
   border-color: black;
-  margin-left: 24px;
-  margin-right: 24px;
-  border: 0.5px solid lightgray;
+  margin-left: 20px;
+  margin-right: 20px;
+  max-height: 40px;
+  border: 1px solid lightgray;
   align-items: center;
-  font-size: 12px;
+  border-left: 1px solid #DEEBFF;
+}
+@media(max-width: 768px) {
+  .filters {
+  }
 }
 .textfilters {
   display: flex;
   align-items: center;
   padding-left: 10px;
-  padding-right: 20px;
+  padding-right: 15px;
+  font-size: 14px;
 }
 .fa-map-marker-alt {
   display: flex;
@@ -149,21 +179,23 @@ body {
   display: flex;
   color: #0065FC;
   background-color: #DEEBFF;
-  padding-left: 14px;
-  padding-top: 14px;
-  padding-bottom: 14px;
-  padding-right: 14px;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
   border-radius: 40px;
   align-self: center;
+  max-height: 13px;
 }
 .fa-child {
   display: flex;
   color: #0065FC;
   background-color: #DEEBFF;
-  padding-left: 17px;
-  padding-top: 14px;
-  padding-bottom: 14px;
-  padding-right: 17px;
+  max-height: 13px;
+  padding-left: 12px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 12px;
   border-radius: 40px;
   align-self: center;
 }
@@ -171,29 +203,33 @@ body {
   display: flex;
   color: #0065FC;
   background-color: #DEEBFF;
-  padding-left: 14px;
-  padding-top: 14px;
-  padding-bottom: 14px;
-  padding-right: 15px;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
   border-radius: 40px;
   align-self: center;
+  max-height: 13px;
 }
 .fa-dog {
   display: flex;
   color: #0065FC;
   background-color: #DEEBFF;
-  padding-left: 14px;
-  padding-top: 14px;
-  padding-bottom: 14px;
-  padding-right: 14px;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
   border-radius: 40px;
   align-self: center;
+  max-height: 13px;
 }
-.fa-info-circle {
+.fa-info {
   display: flex;
-  color: #0065FC;
-  margin-left: -14px;
-  padding-right: 10px;
+  color: blue;
+}
+.fa-circle {
+  display: flex;
+  color: grey;
 }
 .fa-chart-line {
   display: flex;
@@ -214,7 +250,8 @@ body {
 .hbg {
   display: flex;
   font-size: 13px;
-  margin-top: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 .blockbigtitle {
   display: flex;
@@ -222,6 +259,7 @@ body {
   margin-top: 30px;
   margin-bottom: 20px;
   font-size: 18px;
+  font-weight: bold;
 }
 .blocksmalltitle {
   display: flex;
@@ -237,6 +275,7 @@ body {
   font-weight: bold;
   width: 100%;
   padding-top: 5px;
+  font-weight: bold;
 }
 .nuit {
   display: flex;
@@ -248,7 +287,7 @@ body {
   font-size: 12px;
   font-weight: bold;
   padding-left: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 .blockbigtitleact {
   display: flex;
@@ -264,12 +303,16 @@ body {
 }
 .containertwo {
   display: flex;
-  margin-bottom: 20px;
   max-height: 100%;
-  margin-top: -20px;
   gap: 20px;
   margin-right: -34px;
   margin-bottom: 50px;
+  margin-top: -20px;
+}
+@media(max-width: 768px) {
+  .containertwo {
+    flex-direction: column;
+  }
 }
 .imgblockhbg {
   display: flex;
@@ -355,7 +398,7 @@ body {
   flex-wrap: nowrap;
   max-width: 218px;
   border: 3px solid white;
-  box-shadow: 6px 6px 6px var(darkgrey);
+  box-shadow: 6px 6px 6px lightgray;
   width: 100%;
   height: 100%;
   margin-left: 20px;
@@ -371,7 +414,7 @@ body {
   margin-top: 4px;
   margin-bottom: 4px;
   border: 3px solid white;
-  box-shadow: 6px 6px 6px var(darkgrey);
+  box-shadow: 6px 6px 6px lightgray;
   max-width: 100%;
   max-height: 100%;
   align-items: center;
@@ -382,18 +425,21 @@ body {
 }
 .blockact {
   display: flex;
-  background-color: lightgray;
   border-radius: 10px;
   flex-wrap: wrap;
   height: 100%;
   margin-right: -34px;
   height: 100%;
-  gap: 20px;
+  gap: 30px;
+}
+@media(max-width: 768px ) {
+  .blockact {
+  }
 }
 .inblockact {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
 }
 .miniblockpicactvieuxportcalanques{
   display: flex;
@@ -402,14 +448,11 @@ body {
   overflow: column;
   flex-direction: column;
   flex-wrap: nowrap;
-  margin-top: 4px;
-  margin-bottom: 4px;
-  margin-left: 5px;
   margin-right: 5px;
   border: 0px solid white;
-  max-width: 250px;
+  max-width: 270px;
   height: 400px;
-  box-shadow: 6px 6px 6px var(darkgray);
+  box-shadow: 6px 6px 6px lightgray;
 }
 .divimgactvieuxportcalanques {
   display: flex;
@@ -420,7 +463,7 @@ body {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  height: 360px;
+  height: 355px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -432,14 +475,12 @@ body {
   object-fit: cover;
   flex-direction: column;
   flex-wrap: nowrap;
-  margin-top: 4px;
-  margin-bottom: 4px;
   margin-left: 5px;
   margin-right: 5px;
   border: 0px solid white;
-  width: 240px;
+  width: 271px;
   height: 220px;
-  box-shadow: 6px 6px 6px var(darkgrey);
+  box-shadow: 6px 6px 6px lightgray;
 }
 .divimgactfort {
   display: flex;
@@ -452,8 +493,8 @@ body {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  height: 180px;
-  width: 240px;
+  height: 175px;
+  width: 271px;
 }
 .miniblockpicactfrioul {
   display: flex;
@@ -463,14 +504,12 @@ body {
   object-fit: cover;
   flex-direction: column;
   flex-wrap: nowrap;
-  margin-top: 4px;
-  margin-bottom: 4px;
   margin-left: 5px;
   margin-right: 5px;
   border: 0px solid white;
-  max-width: 240px;
+  max-width: 271px;
   height: 150px;
-  box-shadow: 6px 6px 6px var(darkgrey);
+  box-shadow: 6px 6px 6px lightgray;
 }
 .divimgactfrioul {
   display: flex;
@@ -483,7 +522,7 @@ body {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  height: 110px;
+  height: 105px;
 }
 .miniblockpicactgardelongchamps {
   display: flex;
@@ -493,14 +532,11 @@ body {
   object-fit: cover;
   flex-direction: column;
   flex-wrap: nowrap;
-  margin-top: 4px;
-  margin-bottom: 4px;
   margin-left: 5px;
-  margin-right: 5px;
   border: 0px solid white;
-  width: 240px;
-  height: 180px;
-  box-shadow: 6px 6px 6px var(darkgrey);
+  width: 271px;
+  height: 185px;
+  box-shadow: 6px 6px 6px lightgray;
 }
 .divimgactgardelongchamps {
   display: flex;
@@ -513,7 +549,7 @@ body {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  width: 240px;
+  width: 271px;
   height: 140px;
 }
 .divimghbg {
@@ -557,7 +593,7 @@ footer {
   padding-right: 64px;
   padding-top: 10px;
   padding-bottom: 50px;
-  margin-top: 30px;
+  margin-top: 40px;
 }
 .footer-section {
   margin-right: auto;
